maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:35: error: unclosed comment
/*def chercheDir() = {
^JediEscaper:35: error: unclosed comment
/*def chercheDir() = {
^JediEscaper:35: error: unclosed comment
/*def chercheDir() = {
^JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() {
^JediEscaper:2: error: expected start of definition
override def run() {
         ^JediEscaper:35: error: unclosed comment
/*def chercheDir() = {
^